--- a/index.html
+++ b/index.html
@@ -303,14 +303,15 @@
                                             <p class="lead">Página solicitada por un grupo de inversionistas y
                                                 emprendedores con el objetivo de dar a conocer el mundo de las
                                                 criptomonedas, distribución de NFTs y proporcionar soporte en torno a
-                                                las criptomonedas que sus usuarios tengan bajo su posesión. <br><br>
-                                                Desarrollada de forma responsive y usando como base la
-                                                biblioteca multiplataforma Bootstrap 5.
+                                                las criptomonedas que sus usuarios tengan bajo su posesión.
 
                                                 <br>
                                                 <br>
                                             <H3> <a href="https://criptobro.netlify.app" target="_blank">Enlace a la
                                                     Página.</H3> </a>
+                                            <br>
+                                            <br>
+                                            <br>
                                             <br>
 
                                             </p>
